[package]
name = "sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
docs = { path = "./docs" }
sensor = { path = "./sensor" }
mytype = { path = "./mytype" }
image = { path = "./image" }
point = { path = "./point" }
